--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-311.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-889.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇻🇳 越南-7.21MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-351.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇻🇳 越南-1.54MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
   - {name: 🇨🇳 中国-432.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-930.5KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-449.2KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: 6faa5110-0329-11ed-b74c-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-252.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇦 加拿大-714.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇸🇬 新加坡-951.0KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-335.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-243.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-417.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-250.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-335.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-243.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-335.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-243.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-335.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-243.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-335.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-243.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-335.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-243.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-335.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-243.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-335.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-243.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
