--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 (已存活2天)中国-365.3KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-682.0KB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
-  - {name: 🇸🇬 新加坡-951.0KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-400.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-250.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.41MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.21MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.40MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 未知国家-414.9KB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇺🇸 美国-202.1KB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇨🇳 中国-417.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 香港-218.6KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: da8e0008-3c2b-4363-b582-0d9a981cebea, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-226.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-203.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-226.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-248.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活2天)中国-365.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 未知国家-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-218.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-226.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 (已存活2天)中国-365.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 未知国家-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-218.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-226.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活2天)中国-365.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 未知国家-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-218.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-226.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-218.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 (已存活2天)中国-365.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 未知国家-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-218.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-226.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活2天)中国-365.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 未知国家-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-218.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-226.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 (已存活2天)中国-365.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 未知国家-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-218.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-226.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 (已存活2天)中国-365.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
+      - 未知国家-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-218.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-226.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
